[package]
name = "olc_pixel_game_engine"
version = "0.1.0"
description = "Rust bindings for olcPixelGameEngine"
homepage = "https://github.com/sadikovi/olcPixelGameEngine-rs"
repository = "https://github.com/sadikovi/olcPixelGameEngine-rs"
readme = "README.md"
keywords = ["olc", "olcPixelGameEngine"]
authors = ["Ivan Sadikov <ivan.sadikov@gmail.com>"]
edition = "2018"
license = "MIT"

[build-dependencies]
cc = "1.0"
